<resources>
    <string name="app_name">TicTacToe</string>
    <string name="player1_text">Player1</string>
    <string name="player2_text">Player2</string>
    <string name="start_button_text">Play</string>
    <string name="second_1">1s</string>
    <string name="second_2">2s</string>
    <string name="second_5">5s</string>
    <string name="second_10">10s</string>
    <string name="reset">reset</string>

</resources>