<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.miami.cs.carloscarpio.mytictactoe">

    <item
        android:id="@+id/reset"
        android:title="@string/reset"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/second_1"
        android:title="@string/second_1"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/second_2"
        android:title="@string/second_2"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/second_5"
        android:title="@string/second_5"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/second_10"
        android:title="@string/second_10"
        app:showAsAction="never">
    </item>
</menu>
