
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/player1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="@dimen/name_text_size"
            android:hint="@string/player1_text"
            android:layout_margin="@dimen/margin_size">
        </EditText>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <Button
                style="@style/small_button.Red">
            </Button>
        </LinearLayout>

    </LinearLayout>
    <RatingBar
        android:id="@+id/player1_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:isIndicator="true"
        android:numStars="@integer/max_score">
    </RatingBar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/player2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textSize="@dimen/name_text_size"
            android:hint="@string/player2_text"
            android:layout_margin="@dimen/margin_size">
        </EditText>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">
            <Button
                style="@style/small_button.Green">
            </Button>
        </LinearLayout>

    </LinearLayout>
    <RatingBar
        android:id="@+id/player2_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:isIndicator="true"
        android:numStars="@integer/max_score">
    </RatingBar>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/start_button"
            android:layout_width="@dimen/start_button_width"
            android:layout_height="@dimen/start_button_height"
            android:textSize="@dimen/name_text_size"
            android:text="@string/start_button_text"
            android:onClick="myClickHandler">
        </Button>
    </LinearLayout>
</LinearLayout>
